# cleo

./: .gitattributes  .gitbook.yaml  .gitignore  .lint-deployed-template-parity-baseline.json  .lint-dockind-writer-baseline.json  .mailmap  .mcp.json  .versionguard.yml  .worktreeinclude  AGENTS.md  ANALYSIS-TASK-DEPENDENCY-ARCHITECTURE.md  ANALYSIS-WORKFLOWS-INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DOCTOR_IMPROVEMENTS.md  GEMINI.md  INTEGRATION-TEST-COMPLETE.md  INTEGRATION-TEST-REPORT.txt  LICENSE  LICENSING_FAQ.md  MANIFEST.jsonl  NEXT-SESSION-START-HERE.md  ORCH-PLAN.md  PHASE-2-SYNTHESIS.md  PLAN-LAFS-RUST.md  README.md  RESEARCH-PLAN.md  SUPERSESSION-EVIDENCE.md  T805-EXECUTION-CHECKLIST.md  URGENT-MIGRATION-FIX.md  VERSION  WASM-COMPLETENESS-REPORT.md  WASM-HANDOFF-REPORT.md  adr_collision_report.json  api-verification-report.md  biome.json  build-wasm.sh  (+53 more)
.changeset/: README.md  (+414 more)
crates/cant-core/: Cargo.toml  build.rs
crates/cant-core/benches/: parse_message.rs
crates/cant-core/src/: lib.rs  parser.rs  wasm.rs
crates/cant-core/src/dsl/: agent.rs  approval.rs  ast.rs  ast_expressions.rs  ast_orchestration.rs  binding.rs  conditional.rs  discretion.rs  error.rs  expression.rs  frontmatter.rs  hook.rs  import.rs  indent.rs  loop_.rs  mod.rs  parallel.rs  permission.rs  pipeline.rs  property.rs  prose_block.rs  session.rs  skill.rs  span.rs  statement.rs  team.rs  tool.rs  try_catch.rs  workflow.rs
crates/cant-core/src/render/: mod.rs  protocol.rs  tests.rs
crates/cant-core/src/validate/: context.rs  diagnostic.rs  hierarchy.rs  hierarchy_tests.rs  hooks.rs  mod.rs  pipeline_purity.rs  scope.rs  types.rs  workflows.rs
crates/cant-core/tests/: parse_new_sections.rs  protocol_lift.rs  render_round_trip.rs
crates/cant-core/tests/fixtures/: jit-backend-dev.cant  team-platform.cant  tool-dispatch.cant
crates/cant-lsp/: Cargo.toml  README.md
crates/cant-lsp/src/: backend.rs  completions.rs  diagnostics.rs  document.rs  goto.rs  hover.rs  main.rs  symbols.rs
crates/cant-napi/: Cargo.toml  build.rs  cant-napi.linux-x64-gnu.node  index.cjs
crates/cant-napi/src/: lib.rs
crates/cant-router/: Cargo.toml  README.md
crates/cant-router/benches/: route_decision.rs
crates/cant-router/src/: classifier.rs  features.rs  lib.rs  pipeline.rs  router.rs  types.rs
crates/cant-router/tests/: integration.rs
crates/cant-runtime/: Cargo.toml
crates/cant-runtime/benches/: env_resolve.rs
crates/cant-runtime/src/: env.rs  error.rs  lib.rs  pipeline.rs  step.rs
crates/cleo-conduit-core/: Cargo.toml
crates/cleo-conduit-core/benches/: envelope_serde.rs
crates/cleo-llm-native/: Cargo.toml  build.rs
crates/cleo-llm-native/src/: lib.rs
crates/cleo-supervisor/: Cargo.toml  README.md
crates/cleo-supervisor/src/: backoff.rs  ipc.rs  ipc_server.rs  ipc_transport.rs  jobobject.rs  lease_handler.rs  lease_ipc.rs  lib.rs  llm_queue.rs  logging.rs  main.rs  paths.rs  pidfile.rs  process.rs  resource_arbiter.rs  supervisor.rs  watchdog.rs
crates/cleo-supervisor/tests/: idle_rss.rs  ipc_e2e_smoke.rs  lease_ipc_e2e.rs  lifecycle_smoke.rs  llm_queue_e2e.rs  watchdog_e2e.rs
crates/conduit-core/: Cargo.toml
crates/conduit-core/benches/: envelope_serde.rs
crates/conduit-core/src/: lib.rs  wasm.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/lafs-core/: Cargo.toml
crates/lafs-core/benches/: envelope_serde.rs
crates/lafs-core/schemas/v1/: envelope.schema.json
crates/lafs-core/src/: lib.rs  tests.rs  validation_tests.rs  wasm.rs
crates/lafs-napi/: Cargo.toml  build.rs  index.cjs
crates/lafs-napi/src/: lib.rs
crates/signaldock-core/: Cargo.toml
crates/signaldock-core/src/: agent.rs  claim.rs  connection.rs  conversation.rs  lib.rs  message.rs  user.rs  wasm.rs
crates/signaldock-payments/: Cargo.toml
crates/signaldock-payments/src/: config.rs  facilitator.rs  lib.rs  middleware.rs  types.rs
crates/signaldock-protocol/: Cargo.toml  README.md
crates/signaldock-protocol/src/: app_error.rs  error.rs  lib.rs
crates/signaldock-runtime/: Cargo.toml
crates/signaldock-runtime/src/: adapter.rs  cli.rs  config.rs  main.rs  receiver.rs  sender.rs  service.rs
crates/signaldock-runtime/src/adapters/: base.rs  detect.rs  factory.rs  file.rs  file_output.rs  http.rs  mod.rs  openclaw.rs  stdout.rs  webhook.rs
crates/signaldock-sdk/: Cargo.toml  README.md
crates/signaldock-sdk/src/: lib.rs
crates/signaldock-sdk/src/mock/: mod.rs  store.rs  store_messaging.rs
crates/signaldock-sdk/src/services/: agent_service.rs  conversation_service.rs  delivery_service.rs  delivery_worker.rs  message_service.rs  mod.rs
crates/signaldock-storage/: .cargo-rdme.toml  Cargo.toml  README.md  build.rs
crates/signaldock-storage/migrations/2026-03-28-000000_initial/: down.sql  up.sql
crates/signaldock-storage/migrations/2026-03-30-000001_agent_connections/: down.sql  up.sql
crates/signaldock-storage/migrations/2026-03-31-000001_agent_credentials/: down.sql  up.sql
crates/signaldock-storage/src/: lib.rs  schema.rs  sqlite_pragmas.rs  types.rs
crates/signaldock-storage/src/adapters/: diesel_connections_agent.rs  diesel_conversations.rs  diesel_helpers.rs  diesel_jobs.rs  diesel_messages.rs  diesel_others.rs  diesel_store.rs  mod.rs  pg_conversations.rs  pg_helpers.rs  pg_messages.rs  pg_others.rs  postgres.rs  sqlite.rs  sqlite_conversations.rs  sqlite_helpers.rs  sqlite_jobs.rs  sqlite_messages.rs  sqlite_others.rs  sqlite_tests.rs
crates/signaldock-storage/tests/: sqlite_pragmas_ssot.rs
crates/signaldock-transport/: Cargo.toml  README.md
crates/signaldock-transport/src/: lib.rs
crates/worktree-napi/: Cargo.toml  README.md  build.rs  index.cjs  index.d.ts  package.json
crates/worktree-napi/src/: lib.rs
crates/worktrunk-core/: Cargo.toml  README.md
crates/worktrunk-core/src/: agent_wt.rs  cache.rs  copy.rs  diff.rs  git_wt.rs  lib.rs  path.rs  paths.rs  progress.rs  remove_dir.rs  sync.rs  worktreeinclude.rs
crates/worktrunk-core/tests/: copy_integration.rs  parity.rs
(+7487 files in other folders)
