[workspace]
members = [
    "crates/cant-core",
    "crates/cant-lsp",
    "crates/cant-napi",
    "crates/cant-router",
    "crates/cant-runtime",
    "crates/cleo-conduit-core",
    "crates/lafs-core",
    "crates/lafs-napi",
    "crates/worktree-napi",
    "crates/worktrunk-core",
    "crates/integration-tests",
]

# All crates listed above are built and tested by default.
# SignalDock cloud server crates have moved to /mnt/projects/signaldock
# and are published on crates.io (saga T10180).
default-members = [
    "crates/cant-core",
    "crates/cant-lsp",
    "crates/cant-napi",
    "crates/cant-router",
    "crates/cant-runtime",
    "crates/cleo-conduit-core",
    "crates/lafs-core",
    "crates/lafs-napi",
    "crates/worktree-napi",
    "crates/worktrunk-core",
    "crates/integration-tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "2026.5.105"
rust-version = "1.94"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto
sha2 = "0.10"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# napi-rs bindings
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"
napi-build = "1"

# LSP
tower-lsp = "0.20"

# Local workspace crates (publish=true ones have versions kept in sync
# by cargo-release pre-release-replacements — see release.toml)
lafs-core = { path = "crates/lafs-core", version = "=2026.5.105" }
cleo-conduit-core = { path = "crates/cleo-conduit-core", version = "=2026.5.105" }
cant-core = { path = "crates/cant-core", version = "=2026.5.105" }
cant-lsp = { path = "crates/cant-lsp" }
cant-napi = { path = "crates/cant-napi" }
cant-runtime = { path = "crates/cant-runtime" }
worktrunk-core = { path = "crates/worktrunk-core" }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"  # deny (not forbid) so FFI crates can #![allow(unsafe_code)]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"
missing_crate_level_docs = "warn"
bare_urls = "warn"
redundant_explicit_links = "warn"
unescaped_backticks = "warn"
private_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_safety_doc = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
empty_docs = "warn"
doc_markdown = "warn"
needless_doctest_main = "warn"
suspicious_doc_comments = "warn"
too_long_first_doc_paragraph = "warn"
unwrap_used = "deny"
expect_used = "deny"

[package]
name = "cleocode-workspace"
version = "2026.5.104"
edition = "2024"
rust-version = "1.94"

[lints.rustdoc]
broken_intra_doc_links = "deny"
