[package]
name = "cant-core"
version.workspace = true
edition = "2024"
rust-version = "1.88"
description = "Canonical CANT grammar parser for CLEO ecosystem"

[lib]
crate-type = ["rlib"]

[dependencies]
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
conduit-core = { path = "../conduit-core" }

[lints.rustdoc]
broken_intra_doc_links = "warn"
