[package]
name = "cant-core"
version.workspace = true
edition = "2024"
rust-version = "1.94"
description = "Canonical CANT grammar parser for CLEO ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kryptobaseddev/cleo"
keywords = ["cleo", "cant", "parser", "dsl", "agent"]
categories = ["parser-implementations", "development-tools"]
publish = true

[lib]
crate-type = ["rlib"]

[dependencies]
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_message"
harness = false

[lints]
workspace = true
