[package]
name = "cant-lsp"
version.workspace = true
edition = "2024"
rust-version = "1.88"
description = "Language Server Protocol implementation for CANT DSL"

[[bin]]
name = "cant-lsp"
path = "src/main.rs"

[dependencies]
cant-core = { path = "../cant-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
