[package]
name = "cant-napi"
version.workspace = true
edition = "2024"
rust-version = "1.94"
description = "napi-rs bindings for cant-core CANT parser"

publish = false
[lib]
crate-type = ["cdylib"]

[dependencies]
cant-core = { path = "../cant-core" }
# cant-router removed — E8 T11432: zero live TS consumers; router retired from CANT track.
# The router crate itself is preserved in the workspace for reference but no longer
# linked into the published napi binary so it cannot silently ship dead code.
cant-runtime = { path = "../cant-runtime" }
napi = { version = "3", features = ["napi4", "serde-json", "async"] }
napi-derive = "3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[build-dependencies]
napi-build = "1"

[lints]
workspace = true
