[package]
name = "cant-router"
version.workspace = true
edition = "2024"
rust-version = "1.94"
description = "CleoOS v2 model router — 3-layer classifier + router + pipeline"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kryptobaseddev/cleo"
keywords = ["cleo", "router", "classifier", "llm", "agent"]
categories = ["development-tools", "algorithms"]
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "route_decision"
harness = false

[lints]
workspace = true
