[package]
name = "cant-runtime"
version.workspace = true
edition = "2024"
rust-version = "1.88"
description = "CANT DSL runtime - pipeline executor"

[lib]
crate-type = ["rlib"]

[dependencies]
cant-core = { path = "../cant-core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
