[package]
name = "conduit-core"
version.workspace = true
edition = "2024"
rust-version = "1.88"
description = "Canonical Conduit wire types for CLEO ecosystem"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lafs-core = { path = "../lafs-core" }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "lafs-core/wasm"]

[lints.rustdoc]
broken_intra_doc_links = "warn"

# WASM build configuration
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
