[package]
name = "conduit-core"
version.workspace = true
edition = "2024"
rust-version = "1.88"
description = "Canonical Conduit wire types for CLEO ecosystem"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lafs-core = { path = "../lafs-core" }

[lints.rustdoc]
broken_intra_doc_links = "warn"
