[package]
name = "integration-tests"
version.workspace = true
edition = "2024"
rust-version = "1.94"
description = "Integration tests for the CLEO Rust crate ecosystem"
publish = false

[dependencies]
lafs-core = { path = "../lafs-core" }
cleo-conduit-core = { path = "../cleo-conduit-core" }
cant-core = { path = "../cant-core" }
cant-router = { path = "../cant-router" }
serde_json = "1.0"

[lints]
workspace = true
