[package]
name = "lafs-core"
version.workspace = true
edition = "2024"
rust-version = "1.88"
description = "Canonical LAFS envelope types and validation for CLEO ecosystem"

[lib]
crate-type = ["rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[lints]
workspace = true
