[package]
name = "lafs-core"
version.workspace = true
edition = "2024"
rust-version = "1.94"
description = "Canonical LAFS envelope types and validation for CLEO ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kryptobaseddev/cleo"
keywords = ["cleo", "lafs", "envelope", "schema", "agent"]
categories = ["data-structures", "encoding", "api-bindings"]
publish = true

[lib]
crate-type = ["rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
jsonschema = "0.28.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "envelope_serde"
harness = false

[lints]
workspace = true
