[package]
name = "signaldock-sdk"
version.workspace = true
edition = "2024"
rust-version = "1.88"
description = "Service layer and delivery orchestration for SignalDock"
publish = false

[dependencies]
signaldock-protocol = { workspace = true }
signaldock-storage = { workspace = true }
signaldock-transport = { workspace = true }
cant-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
