[package]
name = "signaldock-storage"
version = "0.1.0"
edition = "2024"
description = "Storage traits and database adapters (SQLite + PostgreSQL) for SignalDock"
publish = false

[dependencies]
signaldock-protocol = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }
diesel_migrations = "2"

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite"]
postgres = ["diesel/postgres"]

[lints]
workspace = true
