[package]
name = "signaldock-storage"
version.workspace = true
edition = "2024"
rust-version = "1.88"
description = "Storage traits and Diesel database adapters (SQLite + PostgreSQL) for SignalDock"
publish = false

[dependencies]
signaldock-protocol = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = "2"
deadpool = "0.13"

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite", "diesel-async/sqlite"]
postgres = ["diesel/postgres", "diesel-async/postgres"]

[lints]
workspace = true
